// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DropAnchors snapshots should render DropAnchors 1`] = `
<DocumentFragment>
  <div
    class="DropAnchors DropAnchors--light"
  >
    <div
      class="DropAnchors__prompt DropAnchors__prompt--light"
    />
    <div
      class="DropAnchors__prompt DropAnchors__prompt--light"
    />
    <div
      class="DropAnchors__prompt DropAnchors__prompt--light"
    />
    <div
      class="DropAnchors__prompt DropAnchors__prompt--light"
    />
    element
    <div
      class="DropAnchors__anchor DropAnchors__anchor--light DropAnchors__anchor--top DropAnchors__anchor--top--light"
      data-test-anchor="top"
    />
    <div
      class="DropAnchors__anchor DropAnchors__anchor--light DropAnchors__anchor--bottom DropAnchors__anchor--bottom--light"
      data-test-anchor="bottom"
    />
  </div>
</DocumentFragment>
`;

exports[`DropAnchors snapshots should render some prompt when grid for bottom 1`] = `
<DocumentFragment>
  <div
    class="DropAnchors DropAnchors--light"
  >
    <div
      class="DropAnchors__prompt DropAnchors__prompt--light"
    />
    <div
      class="DropAnchors__prompt DropAnchors__prompt--light"
    />
    <div
      class="DropAnchors__prompt DropAnchors__prompt--light DropAnchors__prompt--bottom DropAnchors__prompt--bottom--light"
    />
    <div
      class="DropAnchors__prompt DropAnchors__prompt--light"
    />
    element
    <div
      class="DropAnchors__anchor DropAnchors__anchor--light DropAnchors__anchor--top DropAnchors__anchor--top--light"
      data-test-anchor="top"
    />
    <div
      class="DropAnchors__anchor DropAnchors__anchor--light DropAnchors__anchor--bottom DropAnchors__anchor--bottom--light"
      data-test-anchor="bottom"
    />
    <div
      class="DropAnchors__anchor DropAnchors__anchor--light DropAnchors__anchor--left DropAnchors__anchor--left--light"
      data-test-anchor="left"
    />
    <div
      class="DropAnchors__anchor DropAnchors__anchor--light DropAnchors__anchor--right DropAnchors__anchor--right--light"
      data-test-anchor="right"
    />
  </div>
</DocumentFragment>
`;

exports[`DropAnchors snapshots should render some prompt when grid for left 1`] = `
<DocumentFragment>
  <div
    class="DropAnchors DropAnchors--light"
  >
    <div
      class="DropAnchors__prompt DropAnchors__prompt--light"
    />
    <div
      class="DropAnchors__prompt DropAnchors__prompt--light DropAnchors__prompt--left DropAnchors__prompt--left--light"
    />
    <div
      class="DropAnchors__prompt DropAnchors__prompt--light"
    />
    <div
      class="DropAnchors__prompt DropAnchors__prompt--light"
    />
    element
    <div
      class="DropAnchors__anchor DropAnchors__anchor--light DropAnchors__anchor--top DropAnchors__anchor--top--light"
      data-test-anchor="top"
    />
    <div
      class="DropAnchors__anchor DropAnchors__anchor--light DropAnchors__anchor--bottom DropAnchors__anchor--bottom--light"
      data-test-anchor="bottom"
    />
    <div
      class="DropAnchors__anchor DropAnchors__anchor--light DropAnchors__anchor--left DropAnchors__anchor--left--light"
      data-test-anchor="left"
    />
    <div
      class="DropAnchors__anchor DropAnchors__anchor--light DropAnchors__anchor--right DropAnchors__anchor--right--light"
      data-test-anchor="right"
    />
  </div>
</DocumentFragment>
`;

exports[`DropAnchors snapshots should render some prompt when grid for right 1`] = `
<DocumentFragment>
  <div
    class="DropAnchors DropAnchors--light"
  >
    <div
      class="DropAnchors__prompt DropAnchors__prompt--light"
    />
    <div
      class="DropAnchors__prompt DropAnchors__prompt--light"
    />
    <div
      class="DropAnchors__prompt DropAnchors__prompt--light"
    />
    <div
      class="DropAnchors__prompt DropAnchors__prompt--light DropAnchors__prompt--right DropAnchors__prompt--right--light"
    />
    element
    <div
      class="DropAnchors__anchor DropAnchors__anchor--light DropAnchors__anchor--top DropAnchors__anchor--top--light"
      data-test-anchor="top"
    />
    <div
      class="DropAnchors__anchor DropAnchors__anchor--light DropAnchors__anchor--bottom DropAnchors__anchor--bottom--light"
      data-test-anchor="bottom"
    />
    <div
      class="DropAnchors__anchor DropAnchors__anchor--light DropAnchors__anchor--left DropAnchors__anchor--left--light"
      data-test-anchor="left"
    />
    <div
      class="DropAnchors__anchor DropAnchors__anchor--light DropAnchors__anchor--right DropAnchors__anchor--right--light"
      data-test-anchor="right"
    />
  </div>
</DocumentFragment>
`;

exports[`DropAnchors snapshots should render some prompt when grid for top 1`] = `
<DocumentFragment>
  <div
    class="DropAnchors DropAnchors--light"
  >
    <div
      class="DropAnchors__prompt DropAnchors__prompt--light DropAnchors__prompt--top DropAnchors__prompt--top--light"
    />
    <div
      class="DropAnchors__prompt DropAnchors__prompt--light"
    />
    <div
      class="DropAnchors__prompt DropAnchors__prompt--light"
    />
    <div
      class="DropAnchors__prompt DropAnchors__prompt--light"
    />
    element
    <div
      class="DropAnchors__anchor DropAnchors__anchor--light DropAnchors__anchor--top DropAnchors__anchor--top--light"
      data-test-anchor="top"
    />
    <div
      class="DropAnchors__anchor DropAnchors__anchor--light DropAnchors__anchor--bottom DropAnchors__anchor--bottom--light"
      data-test-anchor="bottom"
    />
    <div
      class="DropAnchors__anchor DropAnchors__anchor--light DropAnchors__anchor--left DropAnchors__anchor--left--light"
      data-test-anchor="left"
    />
    <div
      class="DropAnchors__anchor DropAnchors__anchor--light DropAnchors__anchor--right DropAnchors__anchor--right--light"
      data-test-anchor="right"
    />
  </div>
</DocumentFragment>
`;

exports[`DropAnchors snapshots should render with next prompt for bottom 1`] = `
<DocumentFragment>
  <div
    class="DropAnchors DropAnchors--light"
  >
    <div
      class="DropAnchors__prompt DropAnchors__prompt--light"
    />
    <div
      class="DropAnchors__prompt DropAnchors__prompt--light"
    />
    <div
      class="DropAnchors__prompt DropAnchors__prompt--light DropAnchors__prompt--bottom DropAnchors__prompt--bottom--light"
    />
    <div
      class="DropAnchors__prompt DropAnchors__prompt--light"
    />
    element
    <div
      class="DropAnchors__anchor DropAnchors__anchor--light DropAnchors__anchor--top DropAnchors__anchor--top--light"
      data-test-anchor="top"
    />
    <div
      class="DropAnchors__anchor DropAnchors__anchor--light DropAnchors__anchor--bottom DropAnchors__anchor--bottom--light"
      data-test-anchor="bottom"
    />
  </div>
</DocumentFragment>
`;

exports[`DropAnchors snapshots should render with next prompt for right 1`] = `
<DocumentFragment>
  <div
    class="DropAnchors DropAnchors--light"
  >
    <div
      class="DropAnchors__prompt DropAnchors__prompt--light"
    />
    <div
      class="DropAnchors__prompt DropAnchors__prompt--light"
    />
    <div
      class="DropAnchors__prompt DropAnchors__prompt--light"
    />
    <div
      class="DropAnchors__prompt DropAnchors__prompt--light DropAnchors__prompt--right DropAnchors__prompt--right--light"
    />
    element
    <div
      class="DropAnchors__anchor DropAnchors__anchor--light DropAnchors__anchor--left DropAnchors__anchor--left--light"
      data-test-anchor="left"
    />
    <div
      class="DropAnchors__anchor DropAnchors__anchor--light DropAnchors__anchor--right DropAnchors__anchor--right--light"
      data-test-anchor="right"
    />
  </div>
</DocumentFragment>
`;

exports[`DropAnchors snapshots should render with prev prompt for left 1`] = `
<DocumentFragment>
  <div
    class="DropAnchors DropAnchors--light"
  >
    <div
      class="DropAnchors__prompt DropAnchors__prompt--light"
    />
    <div
      class="DropAnchors__prompt DropAnchors__prompt--light DropAnchors__prompt--left DropAnchors__prompt--left--light"
    />
    <div
      class="DropAnchors__prompt DropAnchors__prompt--light"
    />
    <div
      class="DropAnchors__prompt DropAnchors__prompt--light"
    />
    element
    <div
      class="DropAnchors__anchor DropAnchors__anchor--light DropAnchors__anchor--left DropAnchors__anchor--left--light"
      data-test-anchor="left"
    />
    <div
      class="DropAnchors__anchor DropAnchors__anchor--light DropAnchors__anchor--right DropAnchors__anchor--right--light"
      data-test-anchor="right"
    />
  </div>
</DocumentFragment>
`;

exports[`DropAnchors snapshots should render with prev prompt for top 1`] = `
<DocumentFragment>
  <div
    class="DropAnchors DropAnchors--light"
  >
    <div
      class="DropAnchors__prompt DropAnchors__prompt--light DropAnchors__prompt--top DropAnchors__prompt--top--light"
    />
    <div
      class="DropAnchors__prompt DropAnchors__prompt--light"
    />
    <div
      class="DropAnchors__prompt DropAnchors__prompt--light"
    />
    <div
      class="DropAnchors__prompt DropAnchors__prompt--light"
    />
    element
    <div
      class="DropAnchors__anchor DropAnchors__anchor--light DropAnchors__anchor--top DropAnchors__anchor--top--light"
      data-test-anchor="top"
    />
    <div
      class="DropAnchors__anchor DropAnchors__anchor--light DropAnchors__anchor--bottom DropAnchors__anchor--bottom--light"
      data-test-anchor="bottom"
    />
  </div>
</DocumentFragment>
`;
